--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
+    "react-multi-carousel": "^2.8.0",
     "styled-components": "4.1.3",
     "tailwindcss": "^3.0.24"
   },
